# goblin_sheet

./: .gitignore  Cargo.toml  README.md  TODO.md  index.html  rustfmt.toml
src/: character_model.rs  components.rs  dice.js  dice.rs  dnd_api.rs  feature_panel.rs  header_panel.rs  lib.rs  main.rs  markdown.rs
src/api/: api_extensions.rs  api_model.rs  mod.rs
src/panels/: center_panel.rs  feature_panel.rs  header_panel.rs  mod.rs  proficencies_panel.rs  stats_panel.rs
static/scss/: _variables.scss
