[package]
name = "goblin_sheet"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
serde = "1.0.164"
serde_json = "1.0.99"
reqwasm = "0.5.0"
comrak = "0.18.0"
web-sys = { version = "0.3.64", features = ["Storage"] }
lazy-regex = "3.0.0"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
    "js"
]
