[package]
name = "goblin_sheet"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4.21"
console_error_panic_hook = "0.1.7"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
comrak = "0.24"
web-sys = { version = "0.3", features = ["Storage"] }
lazy-regex = "3.1"
reqwest = { version = "0.12", features = ["json"] }
wasm-bindgen-futures = "0.4"

[dependencies.uuid]
version = "1.8"
features = ["v4", "fast-rng", "macro-diagnostics", "js"]
